# fama

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
examples/: basic-fail-option.rs  basic-fail.rs  basic-pass-option.rs  basic-pass.rs  confirm.rs  deliver_as.rs  fail.rs  fn-pipes.rs  next.rs  option.rs  option_fn.rs  pass.rs  pipeline_builder.rs  pipeline_builder2.rs  result.rs  result_fn.rs  return-type.rs  safe_delivery.rs  scope.rs  store.rs  thread.rs  trait.rs  work.rs
examples/pipeline_builder3/: crate_a.rs  crate_b.rs  crate_c.rs  main.rs
src/: content.rs  lib.rs  pipeline.rs  pipeline_builder.rs
