[package]
name = "fama"
version = "0.4.3"
edition = "2024"
license = "MIT"
description = "Pipeline Manager"
repository = "https://github.com/shiftrightonce/fama"
keywords = ["webdev", "web", "event", "pipeline", "pipeline-pattern"]
categories = ["asynchronous", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
busybody = { version = "0.5" }
futures = "0.3"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
