[package]
name = "fama"
version = "0.4.6"
edition = "2024"
license = "MIT"
description = "Pipeline Manager"
repository = "https://github.com/shiftrightonce/fama"
keywords = ["webdev", "web", "event", "pipeline", "pipeline-pattern"]
categories = ["asynchronous", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
busybody = { version = "1.0.9" }
futures = "0.3"
tokio = { version = "1.47.1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
